objects/Opportunity.object
<CustomObject><businessProcesses>
        <fullName>Donation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>Events</fullName>
        <description>For Dinner Meetings, Golf Tournaments</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>Membership</fullName>
        <description>Used for membership stage process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>Program</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses><fields>
        <fullName>Accounting_Code__c</fullName>
        <description>Used to match the type of opportunity/transaction with a code in the external financial system.</description>
        <label>Accounting Code</label>
        <length>32</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Check_Date__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Check_Number_Transaction_ID__c</fullName>
        <label>Check Number/Transaction ID</label>
        <length>32</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicate which Contact is connected to the Opportunity (individual member, attendee)</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Credit_Card__c</fullName>
        <description>Indicates the type of credit card</description>
        <label>Credit Card</label>
        <picklist>
            <controllingField>Payment_Type__c</controllingField>
            <picklistValues>
                <fullName>Amex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Used if payment type is Invoice</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Used if payment was made with an invoice</description>
        <label>Invoice Number</label>
        <length>32</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Membership_Contact_ID__c</fullName>
        <formula>Account.Membership_Contact__r.Id</formula>
        <inlineHelpText>Pull the ID of the Membership Contact on the Account record.</inlineHelpText>
        <label>Membership Contact ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Membership_End_Date__c</fullName>
        <description>Indicates when the membership will end</description>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Membership_Start_Date__c</fullName>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Paid_Date__c</fullName>
        <description>Indicate when the opportunity/transaction was paid</description>
        <label>Paid Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash/Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Primary_Contact_ID__c</fullName>
        <formula>Account.Primary_Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pull the ID of the Primary Contact on the Account record.</inlineHelpText>
        <label>Primary Contact ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>attendees__c</fullName>
        <formula>CASE(Accounting_Code__c, 
"12ERECEPTIOOG0901", 10, 
"12ERECEPTIOOS0901", 10, 
"12ERECEPTIOOB0901", 10, 
1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>AllDonations</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.IndividualDonation</value>
        </filters>
        <label>All Donations</label>
    </listViews><listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews><listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews><listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews><listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews><listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews><listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews><recordTypes>
        <fullName>EAB_Membership</fullName>
        <active>true</active>
        <businessProcess>Membership</businessProcess>
        <description>Used for the Executive Advisory Board</description>
        <label>EAB Membership</label>
    </recordTypes><recordTypes>
        <fullName>Event_Registration</fullName>
        <active>true</active>
        <businessProcess>Events</businessProcess>
        <description>Used for dinner meetings, golf tournaments</description>
        <label>Event Registration</label>
    </recordTypes><recordTypes>
        <fullName>Event_Sponsorship_Individual</fullName>
        <active>true</active>
        <businessProcess>Events</businessProcess>
        <label>Event Sponsorship Individual</label>
    </recordTypes><recordTypes>
        <fullName>Event_Sponsorship_Organizational</fullName>
        <active>true</active>
        <businessProcess>Events</businessProcess>
        <label>Event Sponsorship Organizational</label>
    </recordTypes><recordTypes>
        <fullName>Grant</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>Grant Received</description>
        <label>Grant</label>
    </recordTypes><recordTypes>
        <fullName>IndividualDonation</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>Used for donations made by an individual (credit will go to the individual)</description>
        <label>Individual Donation</label>
    </recordTypes><recordTypes>
        <fullName>Individual_Membership</fullName>
        <active>true</active>
        <businessProcess>Membership</businessProcess>
        <description>Used for individual membership</description>
        <label>Individual Membership</label>
    </recordTypes><recordTypes>
        <fullName>MajorGift</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>Large Donation from a Major Donor</description>
        <label>Major Gift</label>
    </recordTypes><recordTypes>
        <fullName>MatchingDonation</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>Matching Donation from an Donor's Employer or other Organization</description>
        <label>Matching Donation</label>
    </recordTypes><recordTypes>
        <fullName>Organization_Donation</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>Used for donations made by an organization (credit will go to the organization)</description>
        <label>Organization Donation</label>
    </recordTypes><recordTypes>
        <fullName>Organizational_Membership</fullName>
        <active>true</active>
        <businessProcess>Membership</businessProcess>
        <description>Used for organizational membership</description>
        <label>Organizational Membership</label>
    </recordTypes><recordTypes>
        <fullName>Program_Registration</fullName>
        <active>true</active>
        <businessProcess>Program</businessProcess>
        <description>Used for program registrations, seminars, webinars</description>
        <label>Program Registration</label>
    </recordTypes><recordTypes>
        <fullName>Program_Sponsorship_Individual</fullName>
        <active>true</active>
        <businessProcess>Events</businessProcess>
        <label>Program Sponsorship Individual</label>
    </recordTypes><recordTypes>
        <fullName>Program_Sponsorship_Organizational</fullName>
        <active>true</active>
        <businessProcess>Program</businessProcess>
        <description>Sponsorships for prorgams like BIM and PPP</description>
        <label>Program Sponsorship Organizational</label>
    </recordTypes><recordTypes>
        <fullName>Purchase</fullName>
        <active>true</active>
        <businessProcess>Program</businessProcess>
        <description>Used to track publications and presentations purchase</description>
        <label>Purchase</label>
    </recordTypes><recordTypes>
        <fullName>Task_Force_Registration_Individual</fullName>
        <active>true</active>
        <businessProcess>Program</businessProcess>
        <description>Use this record type for task force registration</description>
        <label>Task Force Registration Individual</label>
    </recordTypes><recordTypes>
        <fullName>Task_Force_Sponsorship_Organizational</fullName>
        <active>true</active>
        <businessProcess>Events</businessProcess>
        <label>Task Force Sponsorship Organizational</label>
    </recordTypes><validationRules>
        <fullName>Require_Accounting_Code</fullName>
        <active>true</active>
        <errorConditionFormula>and( IsWon = TRUE,   len(Accounting_Code__c)=0 )</errorConditionFormula>
        <errorDisplayField>Accounting_Code__c</errorDisplayField>
        <errorMessage>Please enter an Accounting Code</errorMessage>
    </validationRules><validationRules>
        <fullName>Require_Credit_Card_Type</fullName>
        <active>true</active>
        <errorConditionFormula>and( ISPICKVAL(Payment_Type__c, "Credit Card"), ISPICKVAL( Credit_Card__c ,""))</errorConditionFormula>
        <errorDisplayField>Credit_Card__c</errorDisplayField>
        <errorMessage>Please indicate the type of credit card</errorMessage>
    </validationRules><validationRules>
        <fullName>Require_Payment_Type</fullName>
        <active>true</active>
        <errorConditionFormula>and( IsWon = TRUE,  ISPICKVAL(Payment_Type__c, ""))</errorConditionFormula>
        <errorDisplayField>Payment_Type__c</errorDisplayField>
        <errorMessage>Please provide a Payment Type</errorMessage>
    </validationRules></CustomObject>